--- a/.github/workflows/build-and-run.yml
+++ b/.github/workflows/build-and-run.yml
@@ -24,4 +24,4 @@ jobs:
         run: docker build -t your-dockerhub-username/static-website .
 
       - name: Push Docker image to Docker Hub
-        run: docker push your-dockerhub-username/static-website
+        run: fk427/static-website
