modify the build-and-run.yml file

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -21,7 +21,7 @@ jobs:
         run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
       - name: Build and tag Docker image
-        run: docker build -t fk427/nginx-static-website:${{ github.sha }}
+        run: docker build -t fk427/nginx-static-website . 
       
       - name: Push Docker image to Docker Hub
         run: docker push fk427/nginx-static-website:${{ github.sha }}
