--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -24,4 +24,4 @@ jobs:
         run: docker build -t fk427/nginx-static-website . 
       
       - name: Push Docker image to Docker Hub
-        run: docker push fk427/nginx-static-website:${{ github.sha }}
+        run: docker push fk427/nginx-static-website .
